--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <div class="join-us">
       <h1>Join our community</h1>
       <h2>30-day, hassle-free money back guarantee</h2>
-      <p>Gain access to our full library of tutorials along with expert code reviews.</p>
-      <p>Perfect for any developers who are serious about honing their skills.</p>
+      <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
     </div>
 
 
